tiny change to path to match example

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   deploy:
-    uses: .github/workflows/cdk.yml
+    uses: ./.github/workflows/cdk.yml
     with:
       command: deploy
     secrets:
