--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,8 @@ jobs:
   deploy:
     uses: ./.github/workflows/cdk.yml
     with:
-      command: deploy
+      command: deploy --require-approval never
+      ref: ${{github.ref}}
     secrets:
       AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
