--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -5,9 +5,11 @@ on:
 
 jobs:
   destroy:
+    if: github.event.ref_type == 'branch'
     uses: ./.github/workflows/cdk.yml
     with:
-      command: destroy
+      command: destroy --force
+      ref: ${{github.event.ref}}
     secrets:
       AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
