--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -8,7 +8,8 @@ jobs:
     if: github.event.ref_type == 'branch'
     uses: ./.github/workflows/cdk.yml
     with:
-      command: destroy --force
+      command: destroy
+      args: --force
       ref: ${{github.event.ref}}
     secrets:
       AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
