add cdk-spa-deploy pattern from construct hub and use

--- a/cdk-workshop/package.json
+++ b/cdk-workshop/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "aws-cdk-lib": "2.22.0",
     "cdk-dynamo-table-viewer": "^0.2.0",
+    "cdk-spa-deploy": "^2.0.0-alpha.1",
     "constructs": "^10.0.0"
   }
 }
