--- a/.github/workflows/cdk.yml
+++ b/.github/workflows/cdk.yml
@@ -27,6 +27,12 @@ jobs:
         working-directory: cdk-workshop
     steps:
       - uses: actions/checkout@v3
+
+      - uses: actions/cache@v3
+        with:
+          path: spa/build/**/*
+          key: spa-${{ github.ref }}-${{github.sha}}
+
       - uses: actions/setup-node@v3
         with:
           node-version: 14
