make deploy depend on build!

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
           key: spa-${{ github.ref }}-${{github.sha}}
 
   deploy:
+    needs: build
     uses: ./.github/workflows/cdk.yml
     with:
       command: deploy
