--- a/.github/workflows/cdk.yml
+++ b/.github/workflows/cdk.yml
@@ -42,7 +42,7 @@ jobs:
       - run: npm ci
       - run: npm run build
 
-      - run: ./node_modules/aws-cdk/bin/cdk ${{inputs.command}} ${{inputs.args}}
+      - run: ./node_modules/aws-cdk/bin/cdk ${{inputs.command}} ${{inputs.args}} --outputs-file outputs.json
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
